--- a/app/src/main/res/layout-ar/distinguished_advisors_item.xml
+++ b/app/src/main/res/layout-ar/distinguished_advisors_item.xml
@@ -14,16 +14,14 @@
 
     <ImageView
         android:id="@+id/area_counseling_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="89dp"
+        android:layout_height="106dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/layout_marginTop_8"
         android:layout_gravity="center"
         android:background="@drawable/gray_bacground"
         android:gravity="center_horizontal"
         app:srcCompat="@drawable/image" />
-
     <TextView
         android:id="@+id/area_counseling_name"
         android:layout_width="wrap_content"
