--- a/app/src/main/res/layout-ar/fragment_show_advisor_information.xml
+++ b/app/src/main/res/layout-ar/fragment_show_advisor_information.xml
@@ -138,14 +138,13 @@
 
                     <ImageButton
                         android:id="@+id/profileImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#00000000"
-                        android:src="@drawable/image"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:background="@drawable/gray_bacground"
+                        android:src="@drawable/imageprofile"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-
                     <TextView
                         android:id="@+id/tvAskConsult"
                         android:layout_width="wrap_content"
