--- a/app/src/main/res/layout/areas_counseling_item.xml
+++ b/app/src/main/res/layout/areas_counseling_item.xml
@@ -21,8 +21,8 @@
         android:gravity="center_horizontal">
         <ImageView
             android:id="@+id/area_counseling_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:gravity="center"
             app:srcCompat="@drawable/asteshartnafsi" />
