--- a/app/src/main/res/layout-ar/advisor_details_layout.xml
+++ b/app/src/main/res/layout-ar/advisor_details_layout.xml
@@ -39,8 +39,8 @@
 
     <ImageButton
         android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
         android:background="#00000000"
         android:layout_marginTop="@dimen/activity_vertical_margin_large"
         android:src="@drawable/image"
@@ -188,13 +188,5 @@
         android:layout_toStartOf="@+id/specialSessionButton"
         android:layout_below="@+id/thirdSession"
         />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/sessionRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/layout_margin16">
-            /
-        </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
