--- a/app/src/main/res/layout/areas_counseling_item.xml
+++ b/app/src/main/res/layout/areas_counseling_item.xml
@@ -19,17 +19,22 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">
-        <ImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/area_counseling_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:src="@drawable/asteshartnafsi"
+            app:civ_border_color="@color/colorBlue"
+            app:civ_border_width="2dp"
             app:srcCompat="@drawable/asteshartnafsi" />
         <TextView
             android:id="@+id/area_counseling"
             android:layout_width="match_parent"
             android:text="ddddddddddddddd"
+
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_height="match_parent"
