--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,7 +109,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <ImageView
-                android:id="@+id/back"
+                android:id="@+id/advisor_back"
                 android:layout_width="18dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
@@ -148,7 +148,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/Areas_Counseling" />
 
             <ImageView
-                android:id="@+id/Advisors_back"
+                android:id="@+id/consulta_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
