--- a/app/src/main/res/layout-ar/categoriesdetailsitem.xml
+++ b/app/src/main/res/layout-ar/categoriesdetailsitem.xml
@@ -48,8 +48,8 @@
 
             <ImageView
                 android:id="@+id/profileimage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
