--- a/app/src/main/res/layout-ar/categoriesdetailsitem.xml
+++ b/app/src/main/res/layout-ar/categoriesdetailsitem.xml
@@ -19,7 +19,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="@dimen/activity_horizontal_margin_medium">
+        android:layout_margin="@dimen/activity_horizontal_margin_medium"
+        android:padding="@dimen/activity_horizontal_margin_large">
 
 
 
