--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,107 +6,113 @@
     android:layout_height="match_parent"
     tools:context=".Activity.SignInActivity"
 android:background="@drawable/loginbackgroundwithouticon">
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_marginStart="@dimen/activity_horizontal_margin_large"
-                  android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
-    android:background="#00000000">
 
-       <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-           android:src="@drawable/loginicon"
-           android:layout_gravity="center"
-        />
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:text="@string/signIn"
-                  android:textSize="@dimen/text_header_size"
-                  android:textStyle="bold"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin_large"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
+        android:background="#00000000"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/loginicon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/activity_horizontal_margin_medium"
-            />
+            android:text="@string/signIn"
+            android:textSize="@dimen/text_header_size"
+            android:textStyle="bold" />
 
-        <EditText android:id="@+id/etSignInEmail"
+        <EditText
+            android:id="@+id/etSignInEmail"
             android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_marginTop="@dimen/activity_vertical_margin_xlarge"
-                  android:background="@drawable/edit_text_boarder"
-        android:hint="@string/emailHint"
-        android:drawableStart="@drawable/email"
-        android:drawablePadding="@dimen/activity_vertical_margin_medium"
-        android:padding="@dimen/activity_vertical_margin_medium"
-        android:inputType="textEmailAddress"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin_xlarge"
+            android:background="@drawable/edit_text_boarder"
+            android:drawableStart="@drawable/email"
+            android:drawablePadding="@dimen/activity_vertical_margin_medium"
+            android:hint="@string/emailHint"
+            android:inputType="textEmailAddress"
+            android:padding="@dimen/activity_vertical_margin_medium" />
 
-        <EditText android:id="@+id/etSignInPassword"
+        <EditText
+            android:id="@+id/etSignInPassword"
             android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_marginTop="@dimen/activity_vertical_margin_medium"
-                  android:background="@drawable/edit_text_boarder"
-                  android:hint="@string/passwordHint"
-                  android:drawableStart="@drawable/passward"
-                  android:drawablePadding="@dimen/activity_vertical_margin_medium"
-                  android:padding="@dimen/activity_vertical_margin_medium"
-                  android:inputType="textPassword"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin_large"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin_medium"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
+            android:background="@drawable/edit_text_boarder"
+            android:drawableStart="@drawable/passward"
+            android:drawablePadding="@dimen/activity_vertical_margin_medium"
+            android:hint="@string/passwordHint"
+            android:inputType="textPassword"
+            android:padding="@dimen/activity_vertical_margin_medium" />
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:text="@string/forgetPassword"
-                  android:textSize="@dimen/text_header_size"
-                  android:id="@+id/forgetpassward"
-                  android:layout_margin="@dimen/activity_horizontal_margin_medium"
-        />
+        <TextView
+            android:id="@+id/forgetpassward"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin_medium"
+            android:text="@string/forgetPassword"
+            android:textSize="@dimen/text_header_size" />
 
-        <Button android:id="@+id/buttonSignInSign"
+        <Button
+            android:id="@+id/buttonSignInSign"
             android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/activity_vertical_margin_medium"
-                android:layout_marginTop="@dimen/activity_vertical_margin_large"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
-                android:textColor="@android:color/white"
-                android:text="@string/login"
-                android:background="@drawable/button_dark_boarder"
-        />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin_large"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
+            android:background="@drawable/button_dark_boarder"
+            android:padding="@dimen/activity_vertical_margin_medium"
+            android:text="@string/login"
+            android:textColor="@android:color/white" />
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:text="@string/dontHaveAccount"
-                  android:textSize="@dimen/text_header_size"
-                  android:layout_marginTop="@dimen/activity_horizontal_margin_medium"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/activity_horizontal_margin_medium"
+            android:text="@string/dontHaveAccount"
+            android:textSize="@dimen/text_header_size" />
 
-        <Button android:id="@+id/buttonSignInSignUp"
+        <Button
+            android:id="@+id/buttonSignInSignUp"
             android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/activity_vertical_margin_medium"
-                android:layout_marginTop="@dimen/activity_vertical_margin_small"
-                android:text="@string/signFromHere"
-                android:textColor="@color/colorBlue"
-                android:background="#00000000"
-        />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin_small"
+            android:background="#00000000"
+            android:padding="@dimen/activity_vertical_margin_medium"
+            android:text="@string/signFromHere"
+            android:textColor="@color/colorBlue" />
 
         <TextView
             android:layout_width="match_parent"
-            android:text="@string/choose_lang"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin_medium"
-            android:textSize="@dimen/text_header_size"
-            android:layout_height="wrap_content" />
+            android:gravity="center"
+            android:text="@string/choose_lang"
+            android:textSize="@dimen/text_header_size" />
 
         <Spinner
             android:id="@+id/langauage"
             android:layout_width="match_parent"
-            android:gravity="center"
-
             android:layout_height="wrap_content"
-            />
+
+            android:gravity="center" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
