--- a/app/src/main/res/layout/activity_reset_code.xml
+++ b/app/src/main/res/layout/activity_reset_code.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:layout_marginStart="@dimen/layout_margin16"
-    android:layout_marginEnd="@dimen/layout_margin16"
+    android:layout_marginStart="@dimen/margin_8dp"
+    android:layout_marginEnd="@dimen/margin_8dp"
     android:layout_marginTop="@dimen/layout_margin16"
     tools:context=".Activity.ResetCodeActivity">
 
@@ -33,14 +34,37 @@
     </LinearLayout>
 
 
-    <EditText
-        android:id="@+id/editPhone"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:ems="10"
-        android:inputType="number"
-        android:hint="@string/phoneNumber" />
+        android:orientation="horizontal">
+
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="@dimen/margin_8dp"
+            app:ccp_defaultNameCode="SA"
+            app:ccp_showFullName="false"
+            app:ccp_showPhoneCode="true" />
+
+        <EditText
+            android:id="@+id/editPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
+            android:layout_weight="2"
+            android:background="@drawable/edit_text_boarder"
+            android:drawableStart="@drawable/mobile"
+            android:drawablePadding="@dimen/activity_vertical_margin_medium"
+            android:hint="@string/phoneNumber"
+            android:inputType="phone"
+            android:padding="@dimen/activity_vertical_margin_medium" />
+
+
+    </LinearLayout>
 
 
     <Button
