--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -84,17 +84,42 @@
                 android:inputType="textPassword"
                 />
 
-            <EditText android:id="@+id/etSignUpPhone"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/activity_vertical_margin_medium"
-                android:background="@drawable/edit_text_boarder"
-                android:hint="@string/phoneNumber"
-                android:drawableStart="@drawable/mobile"
-                android:drawablePadding="@dimen/activity_vertical_margin_medium"
-                android:padding="@dimen/activity_vertical_margin_medium"
-                android:inputType="phone"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin_large"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+
+                android:orientation="horizontal">
+
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/ccp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:background="@color/colorWhite"
+                    android:paddingStart="@dimen/margin_8dp"
+                    app:ccp_defaultNameCode="SA"
+                    app:ccp_showFullName="false"
+                    app:ccp_showPhoneCode="true" />
+
+                <EditText
+                    android:id="@+id/etSignUpPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin_medium"
+                    android:layout_marginBottom="@dimen/activity_horizontal_margin_large"
+                    android:layout_weight="2"
+                    android:background="@drawable/edit_text_boarder"
+                    android:drawableStart="@drawable/mobile"
+                    android:drawablePadding="@dimen/activity_vertical_margin_medium"
+                    android:hint="@string/phoneNumber"
+                    android:inputType="phone"
+                    android:padding="@dimen/activity_vertical_margin_medium" />
+
+
+            </LinearLayout>
 
             <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
