--- a/app/src/main/res/layout-ar/fragment_first_slide.xml
+++ b/app/src/main/res/layout-ar/fragment_first_slide.xml
@@ -76,7 +76,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="32dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/abu_dall_mohammed_omar"
                     android:textColor="@color/black"
@@ -92,14 +91,15 @@
                     android:id="@+id/profile_dsc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="@dimen/layout_marginTop_8"
-                    android:layout_marginBottom="8dp"
                     android:text="@string/educational_consultant_holding_an_international_certificate_in_education"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/profileimage"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/profileimage"
                     app:layout_constraintTop_toBottomOf="@+id/profile_name"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.100000024" />
 
                 <TextView
                     android:id="@+id/catoroytype"
