--- a/app/src/main/res/layout-ar/fragment_first_slide.xml
+++ b/app/src/main/res/layout-ar/fragment_first_slide.xml
@@ -59,8 +59,8 @@
 
                 <ImageView
                     android:id="@+id/profileimage"
-                    android:layout_width="80dp"
-                    android:layout_height="100dp"
+                    android:layout_width="89dp"
+                    android:layout_height="111dp"
                     android:layout_marginStart="8dp"
                     android:contentDescription="TODO"
                     android:src="@drawable/image"
@@ -81,6 +81,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
+                    android:background="@drawable/gray_bacground"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/profileimage"
                     app:layout_constraintHorizontal_bias="0.007"
