--- a/app/src/main/res/layout/fragment_first_slide.xml
+++ b/app/src/main/res/layout/fragment_first_slide.xml
@@ -57,11 +57,12 @@
 
             <ImageView
                 android:id="@+id/profileimage"
-                android:layout_width="80dp"
-                android:layout_height="100dp"
+                android:layout_width="89dp"
+                android:layout_height="111dp"
                 android:layout_marginStart="8dp"
                 android:contentDescription="TODO"
                 android:src="@drawable/image"
+                android:background="@drawable/gray_bacground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
