--- a/app/src/main/res/layout-ar/fragment_user_edit_profile.xml
+++ b/app/src/main/res/layout-ar/fragment_user_edit_profile.xml
@@ -121,7 +121,8 @@
                 android:layout_marginStart="@dimen/activity_vertical_margin_large"
                 android:layout_marginEnd="@dimen/activity_vertical_margin_large"/>
 
-            <EditText android:id="@+id/tvEmailAdvisorEditProfile"
+            <TextView
+                android:id="@+id/tvEmailAdvisorEditProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin_medium"
