--- a/app/src/main/res/layout/user_constluct_layout.xml
+++ b/app/src/main/res/layout/user_constluct_layout.xml
@@ -23,6 +23,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/deleteConsult"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_delete_black_24dp"
+            android:background="#00000000"
+            android:layout_margin="@dimen/activity_horizontal_margin_large"/>
+
         <ImageView
             android:id="@+id/consultImage"
             android:layout_width="100dp"
