--- a/app/src/main/res/layout/beneficiaries_feedback_layout.xml
+++ b/app/src/main/res/layout/beneficiaries_feedback_layout.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/beneficiarieFeedbackImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="@dimen/activity_vertical_margin_medium"
         android:src="@drawable/advisorreview"
         app:layout_constraintStart_toStartOf="parent"
