--- a/app/src/main/res/layout-ar/fragment_first_slide.xml
+++ b/app/src/main/res/layout-ar/fragment_first_slide.xml
@@ -64,6 +64,7 @@
                     android:layout_marginStart="8dp"
                     android:contentDescription="TODO"
                     android:src="@drawable/image"
+                    android:background="@drawable/gray_bacground"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
