--- a/app/src/main/res/layout/advisor_details_layout.xml
+++ b/app/src/main/res/layout/advisor_details_layout.xml
@@ -44,6 +44,7 @@
         android:background="#00000000"
         android:layout_marginTop="@dimen/activity_vertical_margin_large"
         android:src="@drawable/image"
+        android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="@+id/tvRatePercent"
         app:layout_constraintTop_toBottomOf="@+id/tvBeneficiarieSatisfaction" />
 
