--- a/app/src/main/res/layout-ar/distinguished_advisors_item.xml
+++ b/app/src/main/res/layout-ar/distinguished_advisors_item.xml
@@ -42,6 +42,7 @@
         android:layout_below="@+id/area_counseling_name"
         android:text="ddddddddddddddd"
         android:textColor="@color/colorBlue"
+        android:gravity="center"
         android:textStyle="bold" />
 
 
