--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,5 +33,9 @@
     <dimen name="smallraduis">4dp</dimen>
     <dimen name="layout_width_area">105dp</dimen>
 
-
+    <dimen name="custom_tab_layout_height">56dp</dimen>
+    <dimen name="media_summary_strip">78dp</dimen>
+    <dimen name="media_summary_grid">96dp</dimen>
+    <dimen name="tab_indicator_height">5dp</dimen>
+    <dimen name="emoji_icon_size">28sp</dimen>
 </resources>
